--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <title>Oliviette Movie</title>
-</head>
-
-<body>
+    <title>Daffa Hub</title>
+  </head>
+  <body>
     <nav>
-        <div class="logo">
-            <img src="./assets/img/logo.png" alt="OlivietteMovie" />
-        </div>
-        <form id="form">
-            <input type="text" placeholder="Search" id="search" class="search" />
-            <button type="submit"><i class="fas fa-search"></i></button>
-        </form>
+      <div class="logo">
+        <img src="./assets/img/logo.png" alt="daffahub" />
+      </div>
+      <form id="form">
+        <input type="text" placeholder="Search" id="search" class="search" />
+        <button type="submit"><i class="fas fa-search"></i></button>
+      </form>
     </nav>
     <div id="tags"></div>
     <div class="searchresult">
-        <h2 id="search_res"></h2>
+      <h2 id="search_res"></h2>
     </div>
     <div id="myNav" class="overlay">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
       >
       <div class="overlay-content" id="overlay-content"></div>
 
@@ -47,12 +49,12 @@
     <footer>
       <div class="text">
         <span
-          >&copy; 2021<a href="#"> Fadlan Muhammad Bahtiar.</a> All rights reserved.
-        </span>
-    </div>
+          >&copy; 2021<a href="#"> Daffa Haidar Nabil Zufar.</a> All rights
+          reserved.</span
+        >
+      </div>
     </footer>
 
     <script src="./assets/js/script.js"></script>
-</body>
-
+  </body>
 </html>
